--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
-
+  sqflite: ^2.2.0+3
+  path_provider: ^2.0.11
+  awesome_snackbar_content: ^0.1.0
+  slider_button: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
